// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`simulation fixtures: 1 PC vs 1 enemy (parity with v0.5.0 pair detail) > produces a stable result with focus-fire and fixed seed 1`] = `
{
  "anyPcDownProbability": 0.89,
  "iterationsCompleted": 1000,
  "perEnemy": [
    {
      "damageShare": 0.3752542372881356,
      "id": "troll",
      "name": "troll",
      "topTargetId": "mira",
    },
  ],
  "perPc": [
    {
      "deathProbability": 0.014,
      "downProbability": 0.89,
      "id": "mira",
      "meanEndingHp": 0.967,
      "name": "mira",
      "topContributingEnemyId": "troll",
    },
  ],
  "tpkProbability": 0.89,
}
`;

exports[`simulation fixtures: 4 PCs vs 1 boss > is stable under boss-cinematic 1`] = `
{
  "anyPcDownProbability": 0.925,
  "meanFirstDownRound": 1.2875675675675675,
  "medianFirstDownRound": 1,
  "perEnemy": [
    {
      "damageShare": 0.38805043755417007,
      "id": "boss",
      "name": "boss",
      "topTargetId": "elya",
    },
  ],
  "perPc": [
    {
      "deathProbability": 0.031,
      "downProbability": 0.554,
      "id": "mira",
      "meanEndingHp": 8.56,
      "name": "mira",
      "topContributingEnemyId": "boss",
    },
    {
      "deathProbability": 0.018,
      "downProbability": 0.389,
      "id": "seam",
      "meanEndingHp": 13.344,
      "name": "seam",
      "topContributingEnemyId": "boss",
    },
    {
      "deathProbability": 0.03,
      "downProbability": 0.735,
      "id": "jor",
      "meanEndingHp": 3.085,
      "name": "jor",
      "topContributingEnemyId": "boss",
    },
    {
      "deathProbability": 0.042,
      "downProbability": 0.757,
      "id": "elya",
      "meanEndingHp": 1.614,
      "name": "elya",
      "topContributingEnemyId": "boss",
    },
  ],
  "profile": "boss-cinematic",
  "tpkProbability": 0.325,
}
`;

exports[`simulation fixtures: 4 PCs vs 1 boss > is stable under focus-fire 1`] = `
{
  "anyPcDownProbability": 0.951,
  "meanFirstDownRound": 1.31335436382755,
  "medianFirstDownRound": 1,
  "perEnemy": [
    {
      "damageShare": 0.3706068439833209,
      "id": "boss",
      "name": "boss",
      "topTargetId": "elya",
    },
  ],
  "perPc": [
    {
      "deathProbability": 0.026,
      "downProbability": 0.499,
      "id": "mira",
      "meanEndingHp": 11.005,
      "name": "mira",
      "topContributingEnemyId": "boss",
    },
    {
      "deathProbability": 0.014,
      "downProbability": 0.316,
      "id": "seam",
      "meanEndingHp": 15.365,
      "name": "seam",
      "topContributingEnemyId": "boss",
    },
    {
      "deathProbability": 0.042,
      "downProbability": 0.738,
      "id": "jor",
      "meanEndingHp": 5.116,
      "name": "jor",
      "topContributingEnemyId": "boss",
    },
    {
      "deathProbability": 0.046,
      "downProbability": 0.951,
      "id": "elya",
      "meanEndingHp": 0.432,
      "name": "elya",
      "topContributingEnemyId": "boss",
    },
  ],
  "profile": "focus-fire",
  "tpkProbability": 0.316,
}
`;

exports[`simulation fixtures: 4 PCs vs 1 boss > is stable under predator 1`] = `
{
  "anyPcDownProbability": 0.957,
  "meanFirstDownRound": 1.28944618599791,
  "medianFirstDownRound": 1,
  "perEnemy": [
    {
      "damageShare": 0.3721049007230575,
      "id": "boss",
      "name": "boss",
      "topTargetId": "elya",
    },
  ],
  "perPc": [
    {
      "deathProbability": 0.02,
      "downProbability": 0.507,
      "id": "mira",
      "meanEndingHp": 10.74,
      "name": "mira",
      "topContributingEnemyId": "boss",
    },
    {
      "deathProbability": 0.021,
      "downProbability": 0.315,
      "id": "seam",
      "meanEndingHp": 15.478,
      "name": "seam",
      "topContributingEnemyId": "boss",
    },
    {
      "deathProbability": 0.031,
      "downProbability": 0.759,
      "id": "jor",
      "meanEndingHp": 4.576,
      "name": "jor",
      "topContributingEnemyId": "boss",
    },
    {
      "deathProbability": 0.044,
      "downProbability": 0.957,
      "id": "elya",
      "meanEndingHp": 0.363,
      "name": "elya",
      "topContributingEnemyId": "boss",
    },
  ],
  "profile": "predator",
  "tpkProbability": 0.315,
}
`;

exports[`simulation fixtures: 4 PCs vs 1 boss > is stable under random-legal 1`] = `
{
  "anyPcDownProbability": 0.896,
  "meanFirstDownRound": 1.4352678571428572,
  "medianFirstDownRound": 1,
  "perEnemy": [
    {
      "damageShare": 0.3985526352696979,
      "id": "boss",
      "name": "boss",
      "topTargetId": "jor",
    },
  ],
  "perPc": [
    {
      "deathProbability": 0.012,
      "downProbability": 0.608,
      "id": "mira",
      "meanEndingHp": 6.443,
      "name": "mira",
      "topContributingEnemyId": "boss",
    },
    {
      "deathProbability": 0.012,
      "downProbability": 0.598,
      "id": "seam",
      "meanEndingHp": 6.244,
      "name": "seam",
      "topContributingEnemyId": "boss",
    },
    {
      "deathProbability": 0.016,
      "downProbability": 0.612,
      "id": "jor",
      "meanEndingHp": 5.909,
      "name": "jor",
      "topContributingEnemyId": "boss",
    },
    {
      "deathProbability": 0.01,
      "downProbability": 0.598,
      "id": "elya",
      "meanEndingHp": 6.36,
      "name": "elya",
      "topContributingEnemyId": "boss",
    },
  ],
  "profile": "random-legal",
  "tpkProbability": 0.366,
}
`;

exports[`simulation fixtures: 4 PCs vs 1 boss > is stable under spread-damage 1`] = `
{
  "anyPcDownProbability": 0.838,
  "meanFirstDownRound": 1.467780429594272,
  "medianFirstDownRound": 1,
  "perEnemy": [
    {
      "damageShare": 0.4150018887860854,
      "id": "boss",
      "name": "boss",
      "topTargetId": "elya",
    },
  ],
  "perPc": [
    {
      "deathProbability": 0.002,
      "downProbability": 0.568,
      "id": "mira",
      "meanEndingHp": 5.587,
      "name": "mira",
      "topContributingEnemyId": "boss",
    },
    {
      "deathProbability": 0.005,
      "downProbability": 0.49,
      "id": "seam",
      "meanEndingHp": 8.44,
      "name": "seam",
      "topContributingEnemyId": "boss",
    },
    {
      "deathProbability": 0.002,
      "downProbability": 0.593,
      "id": "jor",
      "meanEndingHp": 3.548,
      "name": "jor",
      "topContributingEnemyId": "boss",
    },
    {
      "deathProbability": 0.001,
      "downProbability": 0.635,
      "id": "elya",
      "meanEndingHp": 2.622,
      "name": "elya",
      "topContributingEnemyId": "boss",
    },
  ],
  "profile": "spread-damage",
  "tpkProbability": 0.382,
}
`;

exports[`simulation fixtures: 4 PCs vs 4 minions > is stable under boss-cinematic 1`] = `
{
  "anyPcDownProbability": 0.311,
  "perEnemy": [
    {
      "damageShare": 0.016855213540296413,
      "id": "mook-1",
      "name": "mook-1",
      "topTargetId": "elya",
    },
    {
      "damageShare": 0.03836183460492853,
      "id": "mook-2",
      "name": "mook-2",
      "topTargetId": "elya",
    },
    {
      "damageShare": 0.05896343067613786,
      "id": "mook-3",
      "name": "mook-3",
      "topTargetId": "mira",
    },
    {
      "damageShare": 0.07944926773656055,
      "id": "mook-4",
      "name": "mook-4",
      "topTargetId": "seam",
    },
  ],
  "perPc": [
    {
      "deathProbability": 0.002,
      "downProbability": 0.138,
      "id": "mira",
      "meanEndingHp": 10.113,
      "name": "mira",
      "topContributingEnemyId": "mook-4",
    },
    {
      "deathProbability": 0,
      "downProbability": 0.121,
      "id": "seam",
      "meanEndingHp": 11.326,
      "name": "seam",
      "topContributingEnemyId": "mook-4",
    },
    {
      "deathProbability": 0,
      "downProbability": 0.122,
      "id": "jor",
      "meanEndingHp": 10.034,
      "name": "jor",
      "topContributingEnemyId": "mook-4",
    },
    {
      "deathProbability": 0,
      "downProbability": 0.14,
      "id": "elya",
      "meanEndingHp": 9.328,
      "name": "elya",
      "topContributingEnemyId": "mook-4",
    },
  ],
  "profile": "boss-cinematic",
  "tpkProbability": 0.033,
}
`;

exports[`simulation fixtures: 4 PCs vs 4 minions > is stable under focus-fire 1`] = `
{
  "anyPcDownProbability": 0.924,
  "perEnemy": [
    {
      "damageShare": 0.016689847009735744,
      "id": "mook-1",
      "name": "mook-1",
      "topTargetId": "elya",
    },
    {
      "damageShare": 0.043935665632466744,
      "id": "mook-2",
      "name": "mook-2",
      "topTargetId": "elya",
    },
    {
      "damageShare": 0.07127658309855807,
      "id": "mook-3",
      "name": "mook-3",
      "topTargetId": "elya",
    },
    {
      "damageShare": 0.08854494807206907,
      "id": "mook-4",
      "name": "mook-4",
      "topTargetId": "jor",
    },
  ],
  "perPc": [
    {
      "deathProbability": 0.002,
      "downProbability": 0.305,
      "id": "mira",
      "meanEndingHp": 13.703,
      "name": "mira",
      "topContributingEnemyId": "mook-4",
    },
    {
      "deathProbability": 0,
      "downProbability": 0.071,
      "id": "seam",
      "meanEndingHp": 20.742,
      "name": "seam",
      "topContributingEnemyId": "mook-4",
    },
    {
      "deathProbability": 0.003,
      "downProbability": 0.652,
      "id": "jor",
      "meanEndingHp": 5.354,
      "name": "jor",
      "topContributingEnemyId": "mook-4",
    },
    {
      "deathProbability": 0.006,
      "downProbability": 0.924,
      "id": "elya",
      "meanEndingHp": 0.567,
      "name": "elya",
      "topContributingEnemyId": "mook-3",
    },
  ],
  "profile": "focus-fire",
  "tpkProbability": 0.071,
}
`;

exports[`simulation fixtures: 4 PCs vs 4 minions > is stable under predator 1`] = `
{
  "anyPcDownProbability": 0.928,
  "perEnemy": [
    {
      "damageShare": 0.016781581324771117,
      "id": "mook-1",
      "name": "mook-1",
      "topTargetId": "elya",
    },
    {
      "damageShare": 0.04267159958857554,
      "id": "mook-2",
      "name": "mook-2",
      "topTargetId": "elya",
    },
    {
      "damageShare": 0.06890577519485955,
      "id": "mook-3",
      "name": "mook-3",
      "topTargetId": "elya",
    },
    {
      "damageShare": 0.0849130024990516,
      "id": "mook-4",
      "name": "mook-4",
      "topTargetId": "jor",
    },
  ],
  "perPc": [
    {
      "deathProbability": 0.005,
      "downProbability": 0.283,
      "id": "mira",
      "meanEndingHp": 14.387,
      "name": "mira",
      "topContributingEnemyId": "mook-4",
    },
    {
      "deathProbability": 0,
      "downProbability": 0.059,
      "id": "seam",
      "meanEndingHp": 21.141,
      "name": "seam",
      "topContributingEnemyId": "mook-4",
    },
    {
      "deathProbability": 0.006,
      "downProbability": 0.63,
      "id": "jor",
      "meanEndingHp": 5.395,
      "name": "jor",
      "topContributingEnemyId": "mook-4",
    },
    {
      "deathProbability": 0.003,
      "downProbability": 0.928,
      "id": "elya",
      "meanEndingHp": 0.544,
      "name": "elya",
      "topContributingEnemyId": "mook-4",
    },
  ],
  "profile": "predator",
  "tpkProbability": 0.059,
}
`;

exports[`simulation fixtures: 4 PCs vs 4 minions > is stable under random-legal 1`] = `
{
  "anyPcDownProbability": 0.558,
  "perEnemy": [
    {
      "damageShare": 0.01732253675855396,
      "id": "mook-1",
      "name": "mook-1",
      "topTargetId": "seam",
    },
    {
      "damageShare": 0.03995969472757564,
      "id": "mook-2",
      "name": "mook-2",
      "topTargetId": "seam",
    },
    {
      "damageShare": 0.06173472728463234,
      "id": "mook-3",
      "name": "mook-3",
      "topTargetId": "mira",
    },
    {
      "damageShare": 0.07725662235996827,
      "id": "mook-4",
      "name": "mook-4",
      "topTargetId": "jor",
    },
  ],
  "perPc": [
    {
      "deathProbability": 0,
      "downProbability": 0.259,
      "id": "mira",
      "meanEndingHp": 10.05,
      "name": "mira",
      "topContributingEnemyId": "mook-4",
    },
    {
      "deathProbability": 0.002,
      "downProbability": 0.266,
      "id": "seam",
      "meanEndingHp": 10.44,
      "name": "seam",
      "topContributingEnemyId": "mook-4",
    },
    {
      "deathProbability": 0.002,
      "downProbability": 0.236,
      "id": "jor",
      "meanEndingHp": 10.807,
      "name": "jor",
      "topContributingEnemyId": "mook-4",
    },
    {
      "deathProbability": 0.001,
      "downProbability": 0.252,
      "id": "elya",
      "meanEndingHp": 10.747,
      "name": "elya",
      "topContributingEnemyId": "mook-4",
    },
  ],
  "profile": "random-legal",
  "tpkProbability": 0.059,
}
`;

exports[`simulation fixtures: 4 PCs vs 4 minions > is stable under spread-damage 1`] = `
{
  "anyPcDownProbability": 0.251,
  "perEnemy": [
    {
      "damageShare": 0.01724865473745148,
      "id": "mook-1",
      "name": "mook-1",
      "topTargetId": "elya",
    },
    {
      "damageShare": 0.03822882192315874,
      "id": "mook-2",
      "name": "mook-2",
      "topTargetId": "elya",
    },
    {
      "damageShare": 0.05786634210645621,
      "id": "mook-3",
      "name": "mook-3",
      "topTargetId": "jor",
    },
    {
      "damageShare": 0.07773054295249819,
      "id": "mook-4",
      "name": "mook-4",
      "topTargetId": "seam",
    },
  ],
  "perPc": [
    {
      "deathProbability": 0,
      "downProbability": 0.102,
      "id": "mira",
      "meanEndingHp": 10.237,
      "name": "mira",
      "topContributingEnemyId": "mook-4",
    },
    {
      "deathProbability": 0,
      "downProbability": 0.085,
      "id": "seam",
      "meanEndingHp": 11.577,
      "name": "seam",
      "topContributingEnemyId": "mook-4",
    },
    {
      "deathProbability": 0,
      "downProbability": 0.127,
      "id": "jor",
      "meanEndingHp": 9.936,
      "name": "jor",
      "topContributingEnemyId": "mook-4",
    },
    {
      "deathProbability": 0,
      "downProbability": 0.127,
      "id": "elya",
      "meanEndingHp": 9.46,
      "name": "elya",
      "topContributingEnemyId": "mook-4",
    },
  ],
  "profile": "spread-damage",
  "tpkProbability": 0.036,
}
`;

exports[`simulation fixtures: degenerate setups > TPK setup converges to high any-PC-down and TPK 1`] = `
{
  "anyPcDownProbability": 0.978,
  "meanFirstDownRound": 1,
  "tpkProbability": 0.97,
}
`;

exports[`simulation fixtures: degenerate setups > safe setup converges to near-zero down risk 1`] = `
{
  "anyPcDownProbability": 0,
  "tpkProbability": 0,
}
`;
